--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="파일주소" type="./favicon.png" sizes="16x16" />
+    <link rel="icon" href="./favicon.png" type="image/x-icon" sizes="16x16" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
